# books

./: README.md  docker-compose.yml  pyproject.toml
books_app/: manage.py
books_app/app/: admin.py  models.py  urls.py  views.py
books_app/app/migrations/: 0001_initial.py  0002_allbooks_count_page_allbooks_date.py  0003_alter_allbooks_date.py  0004_allbooks_date_manual_alter_allbooks_date.py
books_app/app/templates/app/: page.html
books_app/books_example/: asgi.py  settings.py  urls.py  wsgi.py
