[tool.poetry]
name = "books"
version = "0.1.0"
description = ""
authors = ["MurVladimirOS <v.myravyev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
